welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: value || is not a member of Int
	}else if(a+b==((10+b+c) || (10+c+a))){
                                ^